--- a/_posts/2020-06-21-example.md
+++ b/_posts/2020-06-21-example.md
@@ -1,4 +1,4 @@
----
+<!-- ---
 title: An Example Post
 subtitle: Here is some extra detail about the post.
 layout: default
@@ -15,4 +15,4 @@ e = mc^2. \tag{1}
 $$
 {% endkatexmm %}
 
-Cool!
+Cool! -->
