--- a/_posts/2024-02-14-irl_pe.md
+++ b/_posts/2024-02-14-irl_pe.md
@@ -3,7 +3,8 @@ title: Inverse Reinforcement Learning for Team Sports - Valuing Actions and Play
 subtitle: A method that alternates single-agent IRL to learn a reward function for multiple agents.
 layout: default
 date: 2024-02-13
-keywords: machine learing, reinforcement learning, player evaluation. inverse reinforcement learning
+keywords: machine learning, reinforcement learning, player evaluation. inverse reinforcement learning
+tags: ml rl pe irl
 published: true
 ---
 
