--- a/_posts/2024-02-14-uarl.md
+++ b/_posts/2024-02-14-uarl.md
@@ -3,8 +3,8 @@ title: Uncertainty-Aware Reinforcement Learning for Risk-Sensitive Player Evalua
 subtitle: An an uncertainty-aware Reinforcement Learning (RL) framework to learn a risk-sensitive player evaluation metric from stochastic game dynamics.
 layout: default
 date: 2024-02-13
-keywords: machine learing, reinforcement learning, player evaluation
-tag: ml, rl, pe
+keywords: machine learning, reinforcement learning, player evaluation
+tags: ml rl pe
 published: true
 ---
 
