--- a/_posts/2024-02-14-uarl.md
+++ b/_posts/2024-02-14-uarl.md
@@ -135,11 +135,12 @@ filter OoD samples
 
 ### distributional RL for aleatoric uncertainty
 
-learns distribution of random variable $Z_k(s_t, a_t)$ 
+learns distribution of random variable {% katexmm %} $Z_k(s_t, a_t)$ {% endkatexmm %}
+
 
 # of future goals when a player on team k performs action a_t in state s_t
 
-sum of discounted rewards $\sum^{T_H}_{\iota = t} \gamma^\iota R_{k,\iota} (S_\iota, A_\iota)$ where $A_\iota \sim \pi (\cdot |S_\iota)$
+sum of discounted rewards {% katexmm %} $\sum^{T_H}_{\iota = t} \gamma^\iota R_{k,\iota} (S_\iota, A_\iota)$ where $A_\iota \sim \pi (\cdot |S_\iota)$ {% endkatexmm %}
 
 following **Quantile-Regression-DQN** method
 
@@ -147,35 +148,43 @@ represent distribution of Z by a
 
 **uniform mixture of N support quantiles**
 
+{% katexmm %}
 $$
 \hat{Z}_k(s_t,a_t) = \frac{1}{N}\sum^N_{i=1} \delta_{\theta_{k,i} (s_t,a_t)} 
 $$
+{% endkatexmm %}
 
-where $\theta_{k,i}$ estimates the quantile at quantile level $\hat{\tau}_i = \frac{\tau_{i-1} + \tau_i}{2}$ and $\delta_{\theta_{k,i}}$ denotes a Dirac distribution at $\theta_{k,i}$
+where {% katexmm %} $\theta_{k,i}$ {% endkatexmm %} estimates the quantile at quantile level {% katexmm %} $\hat{\tau}_i = \frac{\tau_{i-1} + \tau_i}{2}$ {% endkatexmm %} and {% katexmm %} $\delta_{\theta_{k,i}}$ {% endkatexmm %} denotes a Dirac distribution at {% katexmm %} $\theta_{k,i}$ {% endkatexmm %}
 
 **distributional bellman operator**
 
 the stochastic process can be captured by a distributional Bellman operator $\tau^\pi$
 
+{% katexmm %}
 $$
 \tau^\pi Z_k(s_t,a_t) {\coloneqq}^\Delta R_k(s_t,a_t) + \gamma Z_k(S_{t+1},A_{t+1})
 $$
+{% endkatexmm %}
 
 same distribution
 
 estimate supporting quantiles of Z by minimizing quantile Huber loss 
 
+{% katexmm %}
 $$
 \frac{1}{N} \sum^N_{i=1}\sum^N_{i^\prime = 1}\rho^\eta_{\hat{\tau}_i}(r + \gamma\theta_{i^\prime,k}(s_{t+1},a_{t+1}) - \theta_{i,k}(s_t,a_t))
 $$
+{% endkatexmm %}
 
-***Proposition 1.*** Assume the Bellman consistence holds by $\hat{Z} :\triangleq R + \gamma P^\pi \hat{Z}$ where $\hat{Z}, R$ are vector-valued random variables and $P^\pi$ is the transition matrix of the stationary policy $\pi$, so $P^\pi_{(s,a),(s^\prime,a^\prime)} = P(s^\prime | a,s)\pi(a^\prime|s^\prime)$, the uncertainty of action-value distributions $\hat{Z}$ under an entropy measure $H(\cdot)$ can be given by 
+***Proposition 1.*** Assume the Bellman consistence holds by {% katexmm %}$\hat{Z} :\triangleq R + \gamma P^\pi \hat{Z}$ {% endkatexmm %}where {% katexmm %}$\hat{Z}, R${% endkatexmm %} are vector-valued random variables and {% katexmm %}$P^\pi${% endkatexmm %} is the transition matrix of the stationary policy {% katexmm %} $\pi$, so $P^\pi_{(s,a),(s^\prime,a^\prime)} = P(s^\prime | a,s)\pi(a^\prime|s^\prime)$ {% endkatexmm %}, the uncertainty of action-value distributions {% katexmm %}$\hat{Z}${% endkatexmm %} under an entropy measure {% katexmm %}$H(\cdot)${% endkatexmm %} can be given by 
 
+{% katexmm %}
 $$
 H(\hat{Z}) = H[R] - |\mathcal{A}||\mathcal{S}|\log(1-\gamma) + \log|\det(\text{d}^\pi)|
 $$
+{% endkatexmm %}
 
-where $\text{d}^\pi = (1 - \gamma)(I - \gamma P^\pi)^{-1} \in [0,1]^{|S||A|\times|S||A|}$ is the induced matrix for distributions over state-action tuples by following policy $\pi$ and transition $P_\tau$. 
+where {% katexmm %}$\text{d}^\pi = (1 - \gamma)(I - \gamma P^\pi)^{-1} \in [0,1]^{|S||A|\times|S||A|}${% endkatexmm %} is the induced matrix for distributions over state-action tuples by following policy {% katexmm %}$\pi${% endkatexmm %} and transition {% katexmm %}$P_\tau${% endkatexmm %}. 
 
 proposition 1 disentangles the entropy of Z into 
 
@@ -201,9 +210,11 @@ feature space conditional normalizing flow (FS_CNF)
     
     idea feature extractor subjects to bi-lipschitz constraint
     
+    {% katexmm %}
     $$
     \beta_1||x_1-x_2||_I \geq ||f_\theta(x_1) - f_\theta(x_2)||_F \geq \beta_2||x_1-x_2||_I \quad \forall x_1, x_2 \in D
     $$
+    {% endkatexmm %}
     
     sensitive to distance & smooth
     
@@ -220,12 +231,14 @@ for high input density indicates low epistemic uncertainty
 
 for low input density indicates high epistemic uncertainty
 
-propose RiGIM based on sum of discounted reward & input density $\hat{Z}_k(s,a) \& p(\cdot|z_E)$ where c is the confidence level
+propose RiGIM based on sum of discounted reward & input density {% katexmm %}$\hat{Z}_k(s,a) \& p(\cdot|z_E)${% endkatexmm %} where c is the confidence level
 
+{% katexmm %}
 $$
 \phi_k(s_{t+1},a_{t+1},c) = [\hat{Z}^c_k(s_{t+1},a_{t+1})-\hat{Z}^c_k(s_t,a_t)]\mathbb{I}_{p(\cdot|z_E)\geq\epsilon} \\
 RiGIM_l(c) = \sum_{(s,a)\in D^\prime}{ n(s,a,l)} \times \phi_k(s,a,c)
 $$
+{% endkatexmm %}
 
 1. risk-averse with large c → better sensitivity to bad outcomes
 2. risk-seeking with small c → better sensitivity to positive outcomes
