--- a/_posts/2024-02-14-irl_pe.md
+++ b/_posts/2024-02-14-irl_pe.md
@@ -84,7 +84,7 @@ home & away as two agents → same action space
 
 ## Alternating Learning for Multi-Agent IRL
 
-**marginal MDP $M(\pi_{-i}) \coloneqq \langle S, A_i, r^\prime, \gamma, T^\prime \rangle$** where
+**marginal MDP {% katexmm %} $M(\pi_{-i}) \coloneqq \langle S, A_i, r^\prime, \gamma, T^\prime \rangle${% endkatexmm %}** where
 
 {% katexmm %}
 $$
@@ -150,10 +150,10 @@ unbiased estimation of squared MMD
 
 {% katexmm %}
 $$
-\begin{align*}
+\begin{aligned}
 \hat{d}^2_{\mathcal{H}_k}(X,Y) &= \frac{1}{n^2_x} \sum^{n_x}_{i=1}\sum^{n_x}_{j=1}k(x_i,x_j) + \frac{1}{n^2_y}\sum^{n_y}_{i=1}\sum^{n_y}_{j=1}k(y_i,y_j) \\ 
 &- \frac{2}{n_x n_y}\sum^{n_x}_{i=1}\sum^{n_y}_{j=1}k(x_i,y_j)
-\end{align*}
+\end{aligned}
 $$
 {% endkatexmm %}
 
@@ -163,10 +163,10 @@ the optimal {% katexmm %} $\hat{\theta}$ {% endkatexmm %} is derived by
 
 {% katexmm %}
 $$
-\begin{align*}
+\begin{aligned}
 \hat{\theta} &= \argmax_\theta L(\theta) - \alpha\hat{d}^2_{\mathcal{H}_k}(R_\theta, R_K) \\
 &= \argmax_\theta L(\theta) + 2\alpha k(r_\theta, r_K)
-\end{align*}
+\end{aligned}
 $$
 {% endkatexmm %}
 
