--- a/_posts/2024-02-17-mmircl.md
+++ b/_posts/2024-02-17-mmircl.md
@@ -124,7 +124,7 @@ $$
 
 where
 
-{% katexmm %}$\mathcal{H} (\pi)${% endkatexmm %} denotes policy entropy weighted by {% endkatexmm %}$\beta${% endkatexmm %}
+{% katexmm %}$\mathcal{H} (\pi)${% endkatexmm %} denotes policy entropy weighted by {% katexmm %}$\beta${% endkatexmm %}
 
 {% katexmm %}$c(\tau | z) = 1 - \Pi_(s,a)\in \tau \phi(s,a|z)${% endkatexmm %} denotes trajectory cost
 
