--- a/_posts/2024-02-17-mmircl.md
+++ b/_posts/2024-02-17-mmircl.md
@@ -7,8 +7,7 @@ keywords: machine learning, reinforcement learning, inverse reinforcement constr
 tags: ml rl ircl
 published: true
 ---
-
-Multi-Modal Inverse Constrained Reinforcement Learning from a Mixture of Demonstrations
+G Qiao, G Liu, P Poupart, Z Xu
 
 ## abstract
 
