--- a/_posts/2024-02-17-mmircl.md
+++ b/_posts/2024-02-17-mmircl.md
@@ -172,11 +172,11 @@ mmicrl
 $$
 \text{Minimize} ~{}~{} -\alpha_1\mathcal{H}[\pi(\tau)] + \alpha_2 \mathcal{H}[\pi(\tau|z)] \\
 \text{Subject to} ~{} 
-\begin{align*}
+\begin{aligned}
 &\int\pi(\tau|z)f_z(\tau)\text{d}\tau = \frac{1}{N} \sum_{\tau\in \mathcal{D}_z}f(\tau) \\ 
 &\int \pi(\tau|z)\text{d}\tau = 1 \\
 & \int \pi(\tau|z)\log \phi(\tau|z)\text{d}\tau \geq \epsilon
-\end{align*}
+\end{aligned}
 $$
 {% endkatexmm %}
 
