--- a/_posts/2024-02-17-mmircl.md
+++ b/_posts/2024-02-17-mmircl.md
@@ -9,6 +9,8 @@ tags: ml rl ircl
 published: true
 ---
 
+<i>{{ page.authors }}</i>
+
 ## abstract
 
 inverse constraint reinforcement learning (icrl)
