--- a/_posts/2024-02-14-irl_pe.md
+++ b/_posts/2024-02-14-irl_pe.md
@@ -1,15 +1,13 @@
 ---
 title: Inverse Reinforcement Learning for Team Sports - Valuing Actions and Players
 subtitle: A method that alternates single-agent IRL to learn a reward function for multiple agents.
+authors: Yudong Luo, Oliver Schulte, and Pascal Poupart
 layout: default
 date: 2024-02-13
 keywords: machine learning, reinforcement learning, player evaluation. inverse reinforcement learning
 tags: ml rl pe irl
 published: true
 ---
-
-# Inverse Reinforcement Learning for Team Sports: Valuing Actions and Players
-Yudong Luo, Oliver Schulte and Pascal Poupart
 
 ## rl vs irl
 
