--- a/_posts/2024-02-14-uarl.md
+++ b/_posts/2024-02-14-uarl.md
@@ -1,15 +1,13 @@
 ---
 title: Uncertainty-Aware Reinforcement Learning for Risk-Sensitive Player Evaluation in Sports Game
 subtitle: An an uncertainty-aware Reinforcement Learning (RL) framework to learn a risk-sensitive player evaluation metric from stochastic game dynamics.
+authors: G Liu, Y Luo, O Schulte, P Poupart
 layout: default
 date: 2024-02-13
 keywords: machine learning, reinforcement learning, player evaluation
 tags: ml rl pe
 published: true
 ---
-
-# Uncertainty-Aware Reinforcement Learning for Risk-Sensitive Player Evaluation in Sports Game
-G Liu, Y Luo, O Schulte, P Poupart
 
 ## abstract
 
