--- a/_posts/2024-02-15-icrl.md
+++ b/_posts/2024-02-15-icrl.md
@@ -1,14 +1,13 @@
 ---
 title: Benchmarking constraint inference in inverse reinforcement learning
 subtitle: This paper constructs an ICRL benchmark in the context of RL application domains.
+authors: G Liu, Y Luo, A Gaurav, K Rezaee, P Poupart
 layout: default
 date: 2024-02-15
 keywords: machine learning, reinforcement learning, inverse reinforcement constraint learning
 tags: ml rl ircl
 published: true
 ---
-
-G Liu, Y Luo, A Gaurav, K Rezaee, P Poupart
 
 ## abstract
 
