--- a/_posts/2024-02-25-eg.md
+++ b/_posts/2024-02-25-eg.md
@@ -1,5 +1,7 @@
 ---
 title: Epsilon-Greedy Strategy
+subtitle:
+authors: Simon Li
 layout: default
 date: 2024-02-25
 keywords: machine learning, reinforcement learning
