--- a/_posts/2024-02-25-ucb.md
+++ b/_posts/2024-02-25-ucb.md
@@ -1,5 +1,7 @@
 ---
 title: Uppder Confidence Bound
+subtitle: I derive the Hoeffding's Bound and analyze the UCB1 algorithm.
+authors: Simon Li
 layout: default
 date: 2024-02-25
 keywords: machine learning, reinforcement learning
