--- a/_posts/2024-02-27-aac.md
+++ b/_posts/2024-02-27-aac.md
@@ -1,5 +1,6 @@
 ---
 title: An Automated Audio Captioning Survey
+subtitle: I give an overview of the task of audio captioning.
 authors: Simon Li
 layout: default
 date: 2024-02-27
