--- a/_posts/2024-02-25-eg.md
+++ b/_posts/2024-02-25-eg.md
@@ -1,6 +1,6 @@
 ---
 title: Epsilon-Greedy Strategy
-subtitle:
+subtitle: I explain Exploration-Exploitation trade-off and Epsilon-Greedy Strategy.
 authors: Simon Li
 layout: default
 date: 2024-02-25
