--- a/_posts/2024-02-29-kws.md
+++ b/_posts/2024-02-29-kws.md
@@ -57,7 +57,9 @@ Depthwise separable CNN is a promising way to reduce the computation and size of
 
 To process the smoothed posteriors $\bar{y}^{\{i\}}$, most deep KWS system deploy the follow approach. Suppose that we have $N$ classes and that the first class is the non-keyword class. Then, a time sequence of confidence score $S_c^{\{i\}}$ can be computed as
 
+{% katexmm %}
 $$S^{\{i\}}_c = \sqrt[N-1]{\Pi^N_{n=2} \max_{h_\text{max}(i) \leq k \leq i} \bar{y}^{\{k\}}_n}$$
+{% endkatexmm %}
 
 where $h_\text{max}(i)$ indicates the onset of the time sliding window. When the confidence $S_c^{\{i\}}$ exceeds a certain sensitivity threshold, a keyword is detected. 
 
