--- a/_posts/2024-02-29-kws.md
+++ b/_posts/2024-02-29-kws.md
@@ -55,13 +55,13 @@ Depthwise separable CNN is a promising way to reduce the computation and size of
 
 ***Non-streaming*** mode refers to standard multi-class classification on independent input segments containing a single word each. This task is treated as the experimental grounds for deep KWS as non-streaming mode lacks realism from a pratical point of view. ***Streaming*** mode, on the other hand, is the continuous processing of an input audio stream where the keywords are not isolated. Therefore, any segment in the streaming mode may or may not contain the desired keywords. Due to this, the sequence of raw posteriors is often smoothed by taking a moving average before further steps. 
 
-To process the smoothed posteriors $\bar{y}^{\{i\}}$, most deep KWS system deploy the follow approach. Suppose that we have $N$ classes and that the first class is the non-keyword class. Then, a time sequence of confidence score $S_c^{\{i\}}$ can be computed as
+To process the smoothed posteriors {% katexmm %}$\bar{y}^{\{i\}}${% endkatexmm %}, most deep KWS system deploy the follow approach. Suppose that we have $N$ classes and that the first class is the non-keyword class. Then, a time sequence of confidence score {% katexmm %}$S_c^{\{i\}}${% endkatexmm %} can be computed as
 
 {% katexmm %}
 $$S^{\{i\}}_c = \sqrt[N-1]{\Pi^N_{n=2} \max_{h_\text{max}(i) \leq k \leq i} \bar{y}^{\{k\}}_n}$$
 {% endkatexmm %}
 
-where $h_\text{max}(i)$ indicates the onset of the time sliding window. When the confidence $S_c^{\{i\}}$ exceeds a certain sensitivity threshold, a keyword is detected. 
+where {% katexmm %}$h_\text{max}(i)${% endkatexmm %} indicates the onset of the time sliding window. When the confidence {% katexmm %}$S_c^{\{i\}}${% endkatexmm %} exceeds a certain sensitivity threshold, a keyword is detected. 
 
 ## Future Direcitons
 
