--- a/_posts/2024-02-29-kws.md
+++ b/_posts/2024-02-29-kws.md
@@ -63,11 +63,11 @@ $$S^{\{i\}}_c = \sqrt[N-1]{\Pi^N_{n=2} \max_{h_\text{max}(i) \leq k \leq i} \bar
 
 where {% katexmm %}$h_\text{max}(i)${% endkatexmm %} indicates the onset of the time sliding window. When the confidence {% katexmm %}$S_c^{\{i\}}${% endkatexmm %} exceeds a certain sensitivity threshold, a keyword is detected. 
 
-## Future Direcitons
+## Future Directions
 
 Immediate future work could focus on developing a novel and efficient ***convolutional block*** such that KWS performance in real-life scenario is improved while reducing the computational complexity. Moreover, based on the initial result of KWS, it is reasonable to expect ***Neural Architecture Search*** to play a greater role in architecture design. 
 
-As for computational complexity reduction, acoustic model reductino can play a crucial role by
+As for computational complexity reduction, acoustic model reduction can play a crucial role by
 1. reducing memory footprint
 2. decrease inference latency
 3. less energy consumption
