--- a/_posts/2024-03-01-bss.md
+++ b/_posts/2024-03-01-bss.md
@@ -13,3 +13,4 @@ This blog provides a brief overview, based on the <a href='https://www.sciencedi
 
 ## Introduction
 
+Blind source separation (BSS) aims to retrieve the source signals wihtout any prioir knowledge of mixing algorithms or source signals. 
