--- a/_posts/2024-03-01-bss.md
+++ b/_posts/2024-03-01-bss.md
@@ -6,11 +6,11 @@ layout: default
 date: 2024-03-01
 keywords: machine learning
 tags: ml
-published: true
+published: false
 ---
 
 This blog provides a brief overview, based on the <a href='https://www.sciencedirect.com/science/article/pii/S0925231223010184'>survey</a>, of the Blind **Source Separation** (BSS).
 
 ## Introduction
 
-Blind source separation (BSS) aims to retrieve the source signals wihtout any prioir knowledge of mixing algorithms or source signals. 
+Blind source separation (BSS) aims to retrieve the source signals wihtout any prior knowledge of mixing algorithms or source signals. 
