--- a/_posts/2024-03-03-ased.md
+++ b/_posts/2024-03-03-ased.md
@@ -1,6 +1,6 @@
 ---
 title: A Anomalous Sound Event Detection Survey
-subtitle: I give an overview of the task of Anomalous SED.
+subtitle: I give an overview of the future directions of Anomalous SED.
 authors: Simon Li
 layout: default
 date: 2024-03-03
@@ -8,6 +8,8 @@ keywords: machine learning
 tags: ml
 published: true
 ---
+
+In this note, I summarize a list of promising future directions for anomaly detection based on the <a href='https://link.springer.com/content/pdf/10.1007/s11042-021-11817-9.pdf'>survey</a>
 
 ## Future Work
 
