--- a/_posts/2024-03-03-ased.md
+++ b/_posts/2024-03-03-ased.md
@@ -1,5 +1,5 @@
 ---
-title: A Anomalous Sound Event Detection Survey
+title: Future Directions for Anomaly Detection
 subtitle: I give an overview of the future directions of Anomalous SED.
 authors: Simon Li
 layout: default
