--- a/_posts/2024-03-05-enclap.md
+++ b/_posts/2024-03-05-enclap.md
@@ -22,23 +22,23 @@ In this work, the authors propose the novel framework, **EnCLAP**, which utilize
 The contributions of the paper are as follows:
 - Achieves SoTA performance on Caps
 - Proposes **masked codec modeling**, which is an auxiliary task to enhacne the *acoustic awareness* of BART
-- Demonstrates the neural codec when used with sequence-level  representations is more optimized to be discrete.
+- Demonstrates the neural codec when used with sequence-level representations is more optimized to be discrete.
 
 ## Proposed Method
 
 ### EnCLAP
 
-The proposed method generates a caption from a given  file in two stages. Firstly, using the given , **EnCodec** and **CLAP** encoders generate a *discrete acoustic code* matrix and a *sequence-level * representation, respectively. Then, the two outputs are *concatenated* and passed to a pretrained **BART** model for captioning.
+The proposed method generates a caption from a given  file in two stages. Firstly, using the given , **EnCodec** and **CLAP** encoders generate a *discrete acoustic code* matrix and a *sequence-level* representation, respectively. Then, the two outputs are *concatenated* and passed to a pretrained **BART** model for captioning.
 
 #### EnCodec
 
 *Note: Codec is a device that encodes or decodes a signal*
 
-EnCodec is a *neural codec* model that is based on a convolutional auto-encoder. The paper utilizes the output of the EnCodec's encoder as the discrete acoustic code matrix. Specifically, the encoder maps a waveform to a ***discrete acoustic code matrix*** {% katexmm %}$C \in V^{N \times L}${% endkatexmm %}, where {% katexmm %}$N${% endkatexmm %} is the number of codebooks used for *Residual Vector Quantization* (RVQ), {% katexmm %}$L${% endkatexmm %} is the encoded  length, and {% katexmm %}$V${% endkatexmm %} is the vocabulary of the codebooks. 
+EnCodec is a *neural codec* model that is based on a convolutional auto-encoder. The paper utilizes the output of the EnCodec's encoder as the discrete acoustic code matrix. Specifically, the encoder maps a waveform to a **discrete acoustic code matrix** {% katexmm %}$C \in V^{N \times L}${% endkatexmm %}, where {% katexmm %}$N${% endkatexmm %} is the number of codebooks used for *Residual Vector Quantization* (RVQ), {% katexmm %}$L${% endkatexmm %} is the encoded  length, and {% katexmm %}$V${% endkatexmm %} is the vocabulary of the codebooks. 
 
 #### CLAP
 
-Contrastive Language- Pretrainin (CLAP) connects audio to text into a joint multimodal space through dual encoders and contrastive learning. In this work, only the audio encoder and the projection layers that map to the shared embeddings space are used. Then, the output of the encoder and projection is used as the *sequence-level semnatic representation* of the audio.
+Contrastive Language-Audio Pretraining (CLAP) connects audio to text into a joint multimodal space through dual encoders and contrastive learning. In this work, only the audio encoder and the projection layers that map to the shared embeddings space are used. Then, the output of the encoder and projection is used as the *sequence-level semnatic representation* of the audio.
 
 #### BART
 
@@ -88,5 +88,5 @@ Then, the modified training objective with auxiliary training task is:
 $$\mathcal{L}_{total} = \mathcal{caption} + \lambda \times \mathcal{L}_{mcm}$$
 {% endkatexmm %}
 
-## Results \& Conclusion
+## Results & Conclusion
 EnCLAP achieved SoTA results on audio captioning. Future works include expanding to music captioning and audio generation.
