--- a/_posts/2024-03-05-enclap.md
+++ b/_posts/2024-03-05-enclap.md
@@ -20,7 +20,7 @@ To address the data scarcity, past research has extensively utilized transfer le
 In this work, the authors propose the novel framework, **EnCLAP**, which utilizes two pretrained acoustic feature encoders and one pretrained langauge model. Specifically, **CLAP** is chosen to generate the *sequence-level* acoustic representations. Moreover, **EnCodec** is also employed to produce *time step-level* acoustic representations as the authors hypothesize that the pretrained language model can leverage *discrete* inputs better than the continuous ones. Lastly, a fine-tuned **BART** model decodes the representations to captions with an **auxiliary training task** on **acoustic awareness**.
 
 The contributions of the paper are as follows:
-- Achieves SoTA performance on Caps
+- Achieves SoTA performance on AudioCaps
 - Proposes **masked codec modeling**, which is an auxiliary task to enhacne the *acoustic awareness* of BART
 - Demonstrates the neural codec when used with sequence-level representations is more optimized to be discrete.
 
