--- a/_posts/2024-03-05-enclap.md
+++ b/_posts/2024-03-05-enclap.md
@@ -85,7 +85,7 @@ $$\mathcal{L}_{mcm} = -\sum^N_{i=1}\left(\frac{1}{2}\right)^t \times \log p(c_{i
 Then, the modified training objective with auxiliary training task is:
 
 {% katexmm %}
-$$\mathcal{L}_{total} = \mathcal{caption} + \lambda \times \mathcal{L}_{mcm}$$
+$$\mathcal{L}_{total} = \mathcal{L}_{caption} + \lambda \times \mathcal{L}_{mcm}$$
 {% endkatexmm %}
 
 ## Results & Conclusion
