--- a/_posts/2024-03-05-enclap.md
+++ b/_posts/2024-03-05-enclap.md
@@ -1,6 +1,6 @@
 ---
 title: EnCLAP - Combining Neural Audio Codec and Audio-Text Joint Embedding for Automated Audio Captioning
-subtitle: My summary notes of the EnCLAP paper. 
+subtitle: EnCLAP is a novel framework for automated caption, utilizing two acoustic representation models with a pretrained language model. 
 authors: Jaeyeon Kim, Jaeyoon Jung, Jinjoo Lee, Sang Hoon Woo
 layout: default
 date: 2024-03-05
@@ -9,7 +9,7 @@ tags: ml, ac
 published: true
 ---
 
-This paper proposes a novel framework for automated  caption, utilizing two acoustic representation models, **EnCodec** and **CLAP**, with a pretrained language model, **BART**. Moreover, the proposed new training object, **masked codec modeling**, proves to improve the **acoustic awareness** and achieves SoTA on Caps and Clotho.
+This paper proposes a novel framework for automated caption, utilizing two acoustic representation models, **EnCodec** and **CLAP**, with a pretrained language model, **BART**. Moreover, the proposed new training object, **masked codec modeling**, proves to improve the **acoustic awareness** and achieves SoTA on Caps and Clotho.
 
 ## Introduction
 
