--- a/_posts/2024-03-10-t1p.md
+++ b/_posts/2024-03-10-t1p.md
@@ -17,7 +17,7 @@ $$
 \text{Policy Opimization: } \pi^* \coloneqq \argmax_\pi J^\pi_\mu (r) \text{ s.t. } J^\pi_\mu (c) \leq \beta \text{ and } \Pi \leftarrow \Pi \cup\{\pi^*\} ~{}(1) \\
 \text{Constraint Adjustment: } c^* \coloneqq \argmax_c \min_{\pi \in \Pi} J^\pi_\mu(c) \text{ s.t. } J^{\pi_E}_\mu (c) \leq \beta ~{} (2)
 $$
-{% katexmm %}
+{% endkatexmm %}
 
 And the theorem 1 is as follows:
 
