--- a/_posts/2024-02-22-sc.md
+++ b/_posts/2024-02-22-sc.md
@@ -72,7 +72,7 @@ The approach is based on the template of IRL, alternating between
 
 We will first show a theoretical approach, followed with the adaptation to a practical problem.
 
-The theoretical approach starts with an empty set of policies $\Pi = \empty$ and grows this set by alternating until convergence
+The theoretical approach starts with an empty set of policies {% katexmm %}$\Pi = \empty${% endkatexmm %} and grows this set by alternating until convergence
 
 {% katexmm %}
 $$
