--- a/_posts/2024-03-10-t1p.md
+++ b/_posts/2024-03-10-t1p.md
@@ -44,11 +44,11 @@ By (2), we also have that
 
 {% katexmm %}
 $$
-\begin{align*}
+\begin{aligned}
 &\max_c \min_{\pi \in \Pi} J^\pi_\mu(c) \text{ subject to } J^{\pi^E}_\mu (c) \leq \beta \\
 &= \min_{\pi \in \Pi} J^\pi_\mu (c^*) \\
 &\leq \beta
-\end{align*}
+\end{aligned}
 $$
 {% endkatexmm %}
 
@@ -57,12 +57,12 @@ For the sake of contradiction, assume that {% katexmm %}$\pi^*${% endkatexmm %} 
 
 {% katexmm %}
 $$
-\begin{align*}
+\begin{aligned}
 & \max_c \min_{\pi \in \Pi} J^\pi_\mu(c) \text{ such that } J^{\pi^E}_\mu (c) \leq \beta && \\
 &\geq \min_{\pi \in \Pi} J^\pi_\mu(\hat{c}) && \hat{c}(s,a) = \frac{r(s,a)\beta}{J^{\pi^E}_\mu(r)} \\
 &= \min_{\pi \in \Pi} J^\pi_\mu(r)\beta / J^{\pi^E}_\mu(r) && \text{by substituting $\hat{c}$} \\
 &> J^{\pi^E}_\mu(r)\beta/J^{\pi^E}_\mu(r) = \beta && \text{since $J^\pi_\mu(r) \geq J^{\pi^E}_\mu(r) ~{} \forall\pi\in\Pi$ by (1)} \\ & && \text{and $J^\pi_\mu(r) \neq J^{\pi^E}_\mu(r)$ by assumption (iii)}
-\end{align*}
+\end{aligned}
 $$
 {% endkatexmm %}
 
